--- a/index.html
+++ b/index.html
@@ -5,3 +5,4 @@ This is the Admin creating an index.html for Tom and Jerry
 
 This is Tom adding Navigation to the AI-website
 
+This is Jerry adding Contact Information
